30_sort_lines/grade.txt
Grading at Fri Jun 19 14:43:34 UTC 2020
Attempting to compile sortLines.c
sortLines.c: In function ‘main’:
sortLines.c:62:2: error: expected ‘;’ before ‘sortData’
  sortData(arr,i);
  ^
The code did not compile!

Overall Grade: F
